<resources>
    <string name="app_name">Playtask</string>
    <string name="rengwu">任务</string>
    <string name="jiangli">奖励</string>
    <string name="tongji">统计</string>
    <string name="wo">我</string>
    <string name="xz">xz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_friend">你好，朋友</string>
    <string name="score">分数变动</string>
    <string name="meiri">每日</string>
    <string name="meizhou">每周</string>
    <string name="putong">普通</string>
    <string name="fubeng">副本</string>
    <string name="tags">标签</string>
    <string name="yes">确定</string>
    <string name="title">任务命名</string>
    <string name="chuji">初级副本</string>
    <string name="zhongji">中级副本</string>
    <string name="gaoji">高级副本</string>
    <string name="No">取消</string>
    <string name="qingchu">清除</string>

</resources>